tests/rules/samples/test_missing_semi_after_call.c
void	test(void)
{
	foo(42)
}
